--- a/index.html
+++ b/index.html
@@ -4,42 +4,48 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Shopping Cart by VoidSec</title>
-
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
   </head>
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/VoidSec/shopping-cart">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/VoidSec/shopping-cart/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/VoidSec/shopping-cart/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
+
     <div class="wrapper">
-      <header>
-        <h1 class="header">Shopping Cart</h1>
-        <p class="header">Vulnerable Web App</p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/VoidSec/shopping-cart/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/VoidSec/shopping-cart/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/VoidSec/shopping-cart">View On GitHub</a></li>
-        </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/VoidSec">VoidSec</a></p>
-
-
-      </header>
       <section>
+        <div id="title">
+          <h1>Shopping Cart</h1>
+          <p>Vulnerable Web App</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/VoidSec">VoidSec</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
+
         <h1>
 <a name="shopping-cart" class="anchor" href="#shopping-cart"><span class="octicon octicon-link"></span></a>shopping-cart</h1>
 
 <p>Shopping Cart is a free, open source web application provided to allow security enthusiest to pen-test and hack a web application. Can be installed on Linux, Windows XP, and Windows 7 using XAMMP making it easy for users who do not want to install or administrate their own webserver.  Contains dozens of vulnerabilities; providing an easy-to-use web hacking environment deliberately designed to be used as a hack-lab for security enthusiast, classroom labs, and vulnerability assessment tool targets. Shopping Cart has been tested/attacked with Acunetix, Kali Linux, W3AF, SQLMAP, Samurai WTF, Backtrack, Burp-Suite, NetSparker, and other tools. If you would like to practice pen-testing/hacking a web application by exploiting cross-site scripting, sql injection, response-splitting, html injection, javascript injection, clickjacking, cross frame scripting, forms-caching, authentication bypass, or many other vulnerabilities, then Shopping Cart is for you. </p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
+
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+    
   </body>
 </html>
