Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,51 +1,66 @@
 <!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Shopping Cart by VoidSec</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  </head>
-  <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/VoidSec/shopping-cart">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/VoidSec/shopping-cart/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/VoidSec/shopping-cart/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
+  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-    <div class="wrapper">
+  <title>Shopping Cart</title>
+  <meta name="description" content="Vulnerable Web App">
 
-      <section>
-        <div id="title">
-          <h1>Shopping Cart</h1>
-          <p>Vulnerable Web App</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/VoidSec">VoidSec</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+</head>
+
+<body>
+
+  <div class="wrapper">
+    <header>
+      <h1 class="title">Shopping Cart</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">Vulnerable Web App</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/VoidSec/shopping-cart/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/VoidSec/shopping-cart/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/VoidSec/shopping-cart" class="code">View Shopping Cart on GitHub</a>
         </div>
-
-        <h1>
-<a name="shopping-cart" class="anchor" href="#shopping-cart"><span class="octicon octicon-link"></span></a>shopping-cart</h1>
-
-<p>Shopping Cart is a free, open source web application provided to allow security enthusiest to pen-test and hack a web application. Can be installed on Linux, Windows XP, and Windows 7 using XAMMP making it easy for users who do not want to install or administrate their own webserver.  Contains dozens of vulnerabilities; providing an easy-to-use web hacking environment deliberately designed to be used as a hack-lab for security enthusiast, classroom labs, and vulnerability assessment tool targets. Shopping Cart has been tested/attacked with Acunetix, Kali Linux, W3AF, SQLMAP, Samurai WTF, Backtrack, Burp-Suite, NetSparker, and other tools. If you would like to practice pen-testing/hacking a web application by exploiting cross-site scripting, sql injection, response-splitting, html injection, javascript injection, clickjacking, cross frame scripting, forms-caching, authentication bypass, or many other vulnerabilities, then Shopping Cart is for you. </p>
-      </section>
-
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <p>Shopping Cart is a free, open source web application provided to allow security enthusiest to <strong>pen-test and hack a web application</strong>.
+<br>
+Can be installed on Linux, Windows XP, and Windows 7 using XAMMP making it easy for users who do not want to install or administrate their own webserver.<br><br>
+Contains dozens of vulnerabilities providing an easy-to-use web hacking environment deliberately designed to be used as a hack-lab for security enthusiast, classroom labs, and vulnerability assessment tool targets. Shopping Cart has been tested/attacked with Acunetix, Kali Linux, W3AF, SQLMAP, Samurai WTF, Backtrack, Burp-Suite, NetSparker, and other tools. <br>
+If you would like to practice pen-testing/hacking a web application by exploiting cross-site scripting, sql injection, response-splitting, html injection, javascript injection, clickjacking, cross frame scripting, forms-caching, authentication bypass, or many other vulnerabilities, then Shopping Cart is for you. </p>
+        </article>
+      </div>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/VoidSec" class="avatar"><img src="https://0.gravatar.com/avatar/83eb1929287a91e35d532c987227d900?d=https%3A%2F%2Fidenticons.github.com%2F18f5d4449fa6ed3b05a138809fd5188e.png&amp;s=30" width="48" height="48"/></a> <a href="https://github.com/VoidSec">VoidSec</a> maintains <a href="https://github.com/VoidSec/shopping-cart">Shopping Cart</a></p>
+
+
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/VoidSec/shopping-cart/tarball/master" class="tar">tar</a><a href="https://github.com/VoidSec/shopping-cart/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
+
+  
+</body>
 </html>
